--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,12 +9,6 @@
 </head>
 
 <body>
-  <h1>
-    <%= title %>
-  </h1>
-  <p>Welcome to
-    <%= title %>
-  </p>
 
   <section>
     <h2>Upload your photo</h2>
@@ -23,6 +17,15 @@
       <input type="file" name="photo">
       <input type="submit" value="Save">
     </form>
+  </section>
+
+  <section>
+    <% pictures.forEach(function(picture) { %>
+      <h3>
+        <%= picture.name %>
+      </h3>
+      <img src="<%= picture.pic_path %>" alt="<%= picture.pic_name %>" />
+      <% })%>
   </section>
 
 </body>
