--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
   </section>
 
   <section>
-    <% pictures.forEach(function(picture) { %>
+    <% pictures.forEach((picture) => { %>
       <h3>
         <%= picture.name %>
       </h3>
